2008-02-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),
	(gst_ffmpegdec_init), (gst_ffmpegdec_setcaps),
	(gst_ffmpegdec_set_property), (gst_ffmpegdec_get_property):
	Add property for controlling of motion vectors. Fixes #515811.
	API: GstFFMpegDec::debug-mv

2008-02-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_loop):
	Don't try handling a buffer if downstream allocation failed.
	Avoids crashes and Fixes #515205

2008-01-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_video_frame):
	Don't blindly copy input timestamp to output timestamp but prefer the
	one attached to the picture when we can.
	Add new variables for the output timestamp and duration to make the code
	a little more clear.

2008-01-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_video_frame):
	Initialize hurry_up to 0 to fix "might be used uninitialized"
	compiler warning.

2008-01-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
	(gst_ffmpegdec_setcaps), (gst_ffmpegdec_video_frame):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_base_init):
	When doing QoS, don't drop the frame before decoding because we might
	drop an important reference frame, just make the decoder hurry_up on
	this frame.

2008-01-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c:
	(gst_ffmpeg_formatid_get_codecids):
	Add H263+ to valid 3GP muxing formats. Fixes #511476.

2008-01-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),
	(gst_ffmpegdec_init), (get_output_buffer), (gst_ffmpegdec_chain),
	(gst_ffmpegdec_change_state), (gst_ffmpegdec_set_property),
	(gst_ffmpegdec_get_property):